Modernize BEAR.Resource validation integration
